erDiagram
    account {
        Long id PK "ID"
        String name "Nome da conta"
        Enum type "Tipo da conta"
        BigDecimal balance "Saldo"
        Boolean is_budget_included "Incluída no orçamento"
        LocalDateTime balance_date "Data do saldo"
        LocalDateTime created_at "Criado em"
        LocalDateTime upadted_at "Atualizado em"
    }
    category {
        Long id PK "ID"
        String name "Nome da categoria"
        LocalDateTime created_at "Criado em"
        LocalDateTime upadted_at "Atualizado em"
    }
    subcategory {
        Long id PK "ID"
        String name "Nome da subcategoria"
        Long category_id FK "ID da categoria"
        LocalDateTime created_at "Criado em"
        LocalDateTime upadted_at "Atualizado em"

    }
    transaction {
        Long id PK "ID"
        Long from_account_id FK "Conta origem"
        Long to_account_id FK "Conta destino"
        Long subcategory_id FK "Subcategoria"
        String payee "Favorecido"
        String description "Descrição"
        BigDecimal amount "Valor"
        LocalDateTime date "Data"
        Enum transaction_type "Tipo (INCOME, EXPENSE, TRANSFER)"
        UUID transfer_group_id "Grupo transferência"
        Enum recurrence_type "Recorrência"
        Enum recurrence_frequency "Frequência"
        Integer installment_count "Parcelas"
        UUID group_id "Grupo recorrente"
        Boolean manual_override "Edição manual"
        Enum status "Status (PENDING, CLEARED)"
        LocalDateTime created_at "Criado em"
        LocalDateTime upadted_at "Atualizado em"
    }
    budget {
        Long id PK "ID"
        Long subcategory_id FK "Subcategoria"
        Integer month "Mês"
        Integer year "Ano"
        BigDecimal limit_amount "Limite"
        LocalDateTime created_at "Criado em"
        LocalDateTime upadted_at "Atualizado em"
    }

    category ||--o{ subcategory : possui
    subcategory ||--o{ transaction : "tem"
    account ||--o{ transaction : "origem"
    account ||--o{ transaction : "destino"
    subcategory ||--o{ budget : "define"
